# python-flask-ai-monitoring

./: .gitignore  README.md  dashboard-custom-event.json  dashboard-lookup-table.json  dashboard-opentelemetry-spans.json  dashboard-opentelemetry.json  dashboard.json  lookup-table-model-cost.csv  model-cost-custom-event.json  model-cost-lookup-table.csv  placeholder.py  prompts.txt  setup_github_token.sh  setup_newrelic_key.sh
0-python-github/: app.py
1-python-azure-openai/: levelone.py
1-python-gemini/: levelone.py
1-python-github/: levelone.py  prompts.txt  requirements.txt  setup_github_token.sh
4-python-autogen-mcp-github/: .env.example  .gitignore  README.md  configure_env.sh  newrelic.ini  pyproject.toml  start_all.sh  stop_all.sh
4-python-autogen-mcp-github/client/: client.py
4-python-autogen-mcp-github/data/: sample.txt
4-python-autogen-mcp-github/docs/: CUSTOM_MIDDLEWARE.md  MCP_CONTEXT_USAGE.md  MODEL_ROTATION.md  NEWRELIC_INSTRUMENTATION.md  TOOLS_MIDDLEWARE.md
4-python-autogen-mcp-github/examples/: context_usage_examples.py  test_instrumentation.py  test_weather_cache.py
4-python-autogen-mcp-github/server/: agent.py
4-python-autogen-mcp-github/server/middleware/: __init__.py  agent_middleware.py
4-python-autogen-mcp-github/tools/: tools_server.py
4-python-autogen-mcp-github/tools/cache/: __init__.py  weather_cache.py
4-python-autogen-mcp-github/tools/handlers/: __init__.py  tool_handlers.py
4-python-autogen-mcp-github/tools/middleware/: __init__.py  tools_middleware.py
4-python-autogen-mcp-github/util/: llm_utils.py
(+85 files in other folders)
